--- a/docs/messaging.adoc
+++ b/docs/messaging.adoc
@@ -37,6 +37,10 @@ Quarkus provides 3 Vert.x APIs:
 
 We're using the _Axle_ variant here, which provides good support for async operations in HTTP resources.
 
+## Run the app
+
+Next, Run the app once more by using the command palette and select **Build and Run Locally** to start the app up in dev local mode.
+
 ## Create RESTful resource
 
 We'll start by creating a new asynchronous endpoint. Open the `PersonResource` class and add a new field which will provide access to the Vert.x event bus which is used to pass messages between components:
@@ -165,6 +169,10 @@ To better understand, let’s detail how the HTTP request/response has been hand
 . Another bean receives this message and computes the response
 . This response is sent back using the reply mechanism
 . Once the reply is received by the sender, the content is written to the HTTP response
+
+## Cleanup
+
+Stop the app for now by pressing CTRL-C in the terminal or closing the Terminal window in which the app runs.
 
 ## Congratulations!
 
